Setting z-index to prevent header menu button's ink animations from appearing

--- a/webclient/src/components/SideNavLayout/style.css
+++ b/webclient/src/components/SideNavLayout/style.css
@@ -6,6 +6,7 @@
   top: 0;
   bottom: 0;
   right: 0;
+  z-index: 1;
   will-change: transform;
   transform : translate3d(0, 0, 0);
 }
